--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
+    "dev": "nodemon apis/index.js",
     "start": "node apis/index.js",
     "build": "npm install && npm install --prefix client && npm run build --prefix client"
   },
